Avoid startup UI flickering on clean cache (#1193)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,7 +20,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: "Roboto", -apple-system, "Apple Color Emoji", BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Apple Color Emoji", "Helvetica Neue", sans-serif;
   color: var(--color-text);
   overflow: hidden;
   @media (max-width: 600px) {
